--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -7,10 +8,11 @@
 
    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
-       android:background="@color/colorPrimary"
        android:layout_width="match_parent"
-       android:layout_height="?android:attr/actionBarSize">
-   </android.support.design.widget.TabLayout>
+       android:layout_height="?android:attr/actionBarSize"
+       android:background="@color/colorPrimary"
+       app:tabIndicatorColor="@color/colorItem"
+       app:tabTextColor="@android:color/white"></android.support.design.widget.TabLayout>
 
    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
