--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/bg_pattern">
+<android.support.design.widget.AppBarLayout
+    android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+   <android.support.v7.widget.Toolbar
+       android:id="@+id/toolbar"
+       android:background="@color/colorPrimary"
+       android:layout_width="match_parent"
+       android:layout_height="?android:attr/actionBarSize">
+
+   </android.support.v7.widget.Toolbar>
 
    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
+       app:layout_scrollFlags="scroll"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:tabIndicatorColor="@color/colorItem"
-       app:tabTextColor="@android:color/white"></android.support.design.widget.TabLayout>
+       app:tabTextColor="@android:color/white" />
+
+</android.support.design.widget.AppBarLayout>
 
    <android.support.v4.view.ViewPager
+       app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
