--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,4 +34,17 @@
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
+
+
+   <android.support.design.widget.FloatingActionButton
+       android:id="@+id/fab"
+       android:src="@drawable/ic_add_black_24dp"
+       android:tint="@color/textColorWhite"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_gravity="bottom|end"
+       android:layout_marginBottom="16dp"
+       android:layout_marginRight="16dp"
+       />
+
 </android.support.design.widget.CoordinatorLayout>
