--- a/app/src/main/res/layout/item_record.xml
+++ b/app/src/main/res/layout/item_record.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
+    android:background="@drawable/item_bg"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="10dp"
@@ -19,7 +20,6 @@
         android:gravity="center"
         android:textSize="20sp"
         android:textColor="@color/textColorWhite"
-        android:background="@color/colorItem"
         />
     <TextView
         android:id="@+id/record_price"
@@ -30,7 +30,7 @@
         android:textSize="20sp"
         android:gravity="center"
         android:textColor="@color/textColorWhite"
-        android:background="@color/colorItemDark"
+        android:background="@color/colorShadow"
         />
 
 </LinearLayout>
