--- a/app/src/main/res/layout/activity_additem.xml
+++ b/app/src/main/res/layout/activity_additem.xml
@@ -20,7 +20,7 @@
     <LinearLayout
         android:elevation="4dp"
         android:orientation="horizontal"
-        android:background="@color/textColorWhite"
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:paddingLeft="22dp"
         android:paddingRight="22dp"
