--- a/app/src/main/res/layout/item_record.xml
+++ b/app/src/main/res/layout/item_record.xml
@@ -19,7 +19,7 @@
         android:padding="16dp"
         android:gravity="center"
         android:textSize="20sp"
-        android:textColor="@color/textColorWhite"
+        android:textColor="@color/white"
         />
     <TextView
         android:id="@+id/record_price"
@@ -29,7 +29,7 @@
         android:padding="16dp"
         android:textSize="20sp"
         android:gravity="center"
-        android:textColor="@color/textColorWhite"
+        android:textColor="@color/white"
         android:background="@color/colorShadow"
         />
 
