--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,11 @@
     <color name="colorExpense">#f76c41</color>
     <color name="colorComment">#95989a</color>
     <color name="colorShadow">#30303030</color>
-</resources>
+
+    <color name="tab_indicator_color">#ffff8d</color>
+    <color name="tab_text_color_default">#ddede8</color>
+    <color name="tab_text_color_active">#ffffff</color>
+    <color name="balance_total_color">#3ab7ae</color>
+    <color name="balance_expense_color">#f76c41</color>
+    <color name="balance_income_color">#fcc31e</color>
+    <color name="balance_secondary_text_color">#95989a</color></resources>
