--- a/app/src/main/res/layout/fragment_balanse.xml
+++ b/app/src/main/res/layout/fragment_balanse.xml
@@ -105,6 +105,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/expense" />
 
+    <com.loftschool.DiagramView
+        android:id="@+id/diagram"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="?android:attr/actionBarSize"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/expense_title" />
     <android.support.constraint.Guideline
         android:id="@+id/guidline"
         android:layout_width="wrap_content"
